<resources>
    <string name="app_name">Drinkshop</string>
    <string name="login_title">Вход</string>
    <string name="register_title">Регистрация</string>
    <string name="catalog_title">Каталог</string>
    <string name="cart_title">Корзина</string>
    <string name="orders_title">Заказы</string>
    <string name="profile_title">Профиль</string>
    <string name="email_label">Email</string>
    <string name="password_label">Пароль</string>
    <string name="full_name_label">Имя</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="sign_out">Выйти</string>
    <string name="add_to_cart">В корзину</string>
    <string name="place_order">Оформить заказ</string>
    <string name="no_orders">Заказов пока нет</string>
    <string name="cart_empty">Корзина пуста</string>
    <string name="bonus_points">Бонусные баллы</string>
</resources>
